# BlockGame

./: .gitignore  README.md
cmake/: CMakeLists.txt
include/Core/: Engine.hpp  Input.hpp  Log.hpp  Math.hpp  WindowManager.hpp
include/ECS/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  System.hpp  SystemManager.hpp
include/ECS/Components/: Camera.hpp  Chunk.hpp  ChunkComponent.hpp  Gravity.hpp  Renderable.hpp  RigidBody.hpp  Transform.hpp
include/ECS/Systems/: CameraSystem.hpp  ChunkSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  TransformSystem.hpp
include/Graphics/: Mesh.hpp  MeshManager.hpp  Shader.hpp  ShaderManager.hpp
include/glad/: glad.h
include/imgui/: imgui.h  imgui_internal.h
libraries/: README.txt
shaders/: basic.frag  basic.vert  chunk.frag  chunk.vert
src/: glad.c  main.cpp
src/Core/: Log.cpp  Math.cpp  WindowManager.cpp
src/ECS/Systems/: CameraSystem.cpp  ChunkSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
src/Graphics/: MeshManager.cpp  Shader.cpp  ShaderManager.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp
